[package]
name = "skybox"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.12"
nix = { version = "0.30.1", features = ["user","fs"] }
raster = { path = "../raster" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slurm-spank = "0.4.0"
toml = "0.9.8"
users = "0.11.0"
