[package]
name = "skybox"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.12"
mktemp = "0.5.1"
nix = { version = "0.30.1", features = ["user","fs"] }
raster = { path = "../raster" }
sarus-suite-podman-driver = { path = "../podman-driver" }
serde = { version = "1.0.228", features = ["derive","rc"] }
serde_json = "1.0.145"
shutil = "0.1.2"
slurm-spank = "0.4.0"
text_io = "0.1.13"
toml = "0.9.8"
users = "0.11.0"
