[package]
name = "skybox"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.4"
eyre = "0.6.12"
libc = "0.2.177"
mktemp = "0.5.1"
nix = { version = "0.30.1", features = ["user","fs","signal"] }
raster = { git = "https://github.com/sarus-suite/raster", branch = "small_edf" }
sarus-suite-podman-driver = { git = "https://github.com/sarus-suite/podman-driver", branch = "small_edf" }
serde = { version = "1.0.228", features = ["derive","rc"] }
serde_json = "1.0.145"
shutil = "0.1.2"
slurm-spank = "0.4.0"
text_io = "0.1.13"
toml = "0.9.8"
users = "0.11.0"
